--- a/editor-ui/package.json
+++ b/editor-ui/package.json
@@ -1,9 +1,28 @@
 {
   "name": "editor-ui",
   "version": "1.21.98",
+  "author": "PlayCanvas <support@playcanvas.com>",
   "homepage": "https://playcanvas.com",
   "description": "The PlayCanvas Editor UI",
-  "main": "index.js",
+  "keywords": [
+    "editor",
+    "html5",
+    "javascript",
+    "pcui",
+    "playcanvas",
+    "webgl",
+    "webgpu",
+    "webxr"
+  ],
+  "license": "MIT",
+  "main": "js/index.js",
+  "bugs": {
+    "url": "https://github.com/playcanvas/editor/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/playcanvas/editor.git"
+  },
   "scripts": {
     "lint": "eslint --ext .js .",
     "build": "cross-env NODE_ENV=production rollup -c",
@@ -11,8 +30,6 @@
     "serve": "serve dist -p 3487",
     "develop": "concurrently --kill-others \"npm run watch\" \"npm run serve\""
   },
-  "author": "PlayCanvas <support@playcanvas.com>",
-  "license": "ISC",
   "devDependencies": {
     "@playcanvas/editor-api": "^1.0.23",
     "@playcanvas/eslint-config": "^1.3.0",
