Add CSS linting support via Stylelint (#1758)
* Add Stylelint config

* Add package.json script for linting CSS

* Add carriage return at EOF

Co-authored-by: Will Eastcott <will@playcanvas.com>

--- a/editor-ui/package.json
+++ b/editor-ui/package.json
@@ -24,7 +24,9 @@
     "url": "https://github.com/playcanvas/editor.git"
   },
   "scripts": {
-    "lint": "eslint --ext .js .",
+    "lint:css": "stylelint sass",
+    "lint:js": "eslint --ext .js .",
+    "lint": "npm run lint:js && npm run lint:css",
     "build": "cross-env NODE_ENV=production rollup -c",
     "watch": "rollup -c -w",
     "serve": "serve dist -p 3487",
@@ -50,6 +52,8 @@
     "rollup": "^3.3.0",
     "rollup-plugin-sass": "^1.12.16",
     "serve": "^14.1.1",
-    "sharedb": "1.9.2"
+    "sharedb": "1.9.2",
+    "stylelint": "^14.15.0",
+    "stylelint-config-standard-scss": "^6.1.0"
   }
 }
