--- a/editor-ui/.stylelintrc.json
+++ b/editor-ui/.stylelintrc.json
@@ -1,17 +1,15 @@
 {
     "extends": "stylelint-config-standard-scss",
     "rules": {
-        "indentation": null,
+        "indentation": 4,
         "alpha-value-notation": null,
         "at-rule-empty-line-before": null,
         "at-rule-no-vendor-prefix": null,
         "color-function-notation": null,
         "declaration-block-no-redundant-longhand-properties": null,
         "declaration-block-no-shorthand-property-overrides": null,
-        "declaration-colon-newline-after": null,
         "declaration-empty-line-before": null,
         "font-family-no-missing-generic-family-keyword": null,
-        "function-comma-newline-after": null,
         "function-name-case": null,
         "keyframes-name-pattern": null,
         "max-line-length": null,
@@ -25,14 +23,11 @@
         "scss/dollar-variable-empty-line-before": null,
         "scss/dollar-variable-pattern": null,
         "scss/double-slash-comment-empty-line-before": null,
-        "selector-attribute-quotes": null,
         "selector-class-pattern": null,
-        "selector-list-comma-newline-after": null,
         "selector-no-vendor-prefix": null,
-        "selector-not-notation": null,
         "selector-pseudo-element-colon-notation": null,
         "shorthand-property-no-redundant-values": null,
-        "string-quotes": null,
+        "string-quotes": "single",
         "value-keyword-case": null,
         "value-no-vendor-prefix": null
     }
