--- a/editor-ui/package.json
+++ b/editor-ui/package.json
@@ -37,9 +37,9 @@
     "postinstall": "./node_modules/.bin/browserify build-sharedb-client.js -o js/realtime/share.uncompressed.js"
   },
   "devDependencies": {
-    "@playcanvas/editor-api": "^1.0.24",
+    "@playcanvas/editor-api": "1.0.27",
     "@playcanvas/eslint-config": "^1.3.0",
-    "@playcanvas/observer": "^1.3.1",
+    "@playcanvas/observer": "^1.3.3",
     "@playcanvas/pcui": "^2.8.0",
     "@playcanvas/pcui-graph": "^2.1.0",
     "@rollup/plugin-alias": "^4.0.2",
