--- a/editor-ui/package.json
+++ b/editor-ui/package.json
@@ -40,7 +40,7 @@
     "@playcanvas/editor-api": "1.0.27",
     "@playcanvas/eslint-config": "^1.3.0",
     "@playcanvas/observer": "^1.3.3",
-    "@playcanvas/pcui": "^2.8.0",
+    "@playcanvas/pcui": "2.8.0",
     "@playcanvas/pcui-graph": "^2.1.0",
     "@rollup/plugin-alias": "^4.0.2",
     "@rollup/plugin-commonjs": "^23.0.2",
