--- a/editor-ui/package.json
+++ b/editor-ui/package.json
@@ -41,7 +41,7 @@
     "@playcanvas/eslint-config": "^1.3.0",
     "@playcanvas/observer": "^1.3.3",
     "@playcanvas/pcui": "2.8.0",
-    "@playcanvas/pcui-graph": "^2.1.0",
+    "@playcanvas/pcui-graph": "2.1.0",
     "@rollup/plugin-alias": "^4.0.2",
     "@rollup/plugin-commonjs": "^23.0.2",
     "@rollup/plugin-node-resolve": "^15.0.1",
