--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,8 +2,6 @@
     "extends": "stylelint-config-standard-scss",
     "rules": {
         "indentation": 4,
-        "at-rule-empty-line-before": null,
-        "color-function-notation": null,
         "declaration-block-no-redundant-longhand-properties": null,
         "declaration-block-no-shorthand-property-overrides": null,
         "font-family-no-missing-generic-family-keyword": null,
@@ -17,8 +15,6 @@
         "scss/at-extend-no-missing-placeholder": null,
         "scss/dollar-variable-pattern": null,
         "selector-class-pattern": null,
-        "shorthand-property-no-redundant-values": null,
-        "string-quotes": "single",
-        "value-keyword-case": null
+        "string-quotes": "single"
     }
 }
