--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "concurrently": "^7.5.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.26.0",
+    "highlight.js": "^11.7.0",
     "ot-text": "github:playcanvas/ot-text",
     "postcss": "^8.4.19",
     "rollup": "^3.3.0",
