Revert "Migrate Messenger to Modules (#57)" (#69)
This reverts commit ca13ecbf7a1ba7e4e7f6e0f2496fc8ff23e0a68f.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
     "pcBootstrap": false,
     "utils": false,
     "observer": false,
+    "Messenger": false,
     "EditorGrid": false,
     "pcuiGraph": false,
     "metrics": false,
