--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "@playcanvas/editor-api": "1.0.28",
     "@playcanvas/eslint-config": "^1.3.0",
     "@playcanvas/observer": "^1.3.6",
-    "@playcanvas/pcui": "4.0.4",
-    "@playcanvas/pcui-graph": "3.0.2",
+    "@playcanvas/pcui": "^4.0.10",
+    "@playcanvas/pcui-graph": "^4.0.1",
     "@rollup/plugin-alias": "^5.0.0",
     "@rollup/plugin-commonjs": "^24.1.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
@@ -56,7 +56,7 @@
     "highlight.js": "^11.8.0",
     "ot-text": "github:playcanvas/ot-text",
     "postcss": "^8.4.23",
-    "rollup": "^3.21.3",
+    "rollup": "^3.21.5",
     "rollup-plugin-sass": "^1.12.16",
     "serve": "^14.1.1",
     "sharedb": "3.2.1",
